add normal travis key

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,34 @@ script: bash -ex travis.sh
 env:
   matrix:
   - OCAML_VERSION=4.01.0 OPAM_VERSION=1.1.0 MIRAGE_BACKEND=xen DEPLOY=1
+  global:
+  - secure: A2RsQWgM3VMHOn3zkLC/jTIDFaWE58j/svYh0Xcn/r0mZA3TWjtFb4/gWEj3YNfZ/MVN6v4OILcNH6tWmwFnW25eqhXwhyVOovmmewrdqmdLkvJ1wahAXEiihWb0oZ9Mz1DqAemB0Goa2hnrUVdYhOyvOJ8woVQEIeTd49P92Vc=
+  - secure: Jyfrlo2EpVuEIyFTUZkYbjKT5vKWkVLvRX9uQ8dUAGsXzviCVn/l4oeg9L/JgUh1vZ0DTPmqjPWjjbufVC4jZwdTHxk74PEaqooBsI6XpkKv1KgErpcPXEeZvh3BmUMIh575m1Bqiuo/snynftvDABrgHypL34OVl3XfhF//eBM=
+  - secure: dtZtyiMrj2LY0vl5oe57zMs7ALy3geicXB2Lnh0o4hC1kJpEevuf6LyWyt2OD/A4RPkvfvJmNF0hKZmoNQnKWawBbh1qiigin6Wbn/H2V9/7gWMAtzPANk00i+FTkmxBZhY5v6Tmsg9PHgi1AWM0HyyvncqC9Iy54fS/hxw0APQ=
+  - secure: EK06WqoiAPQZ30H+OwzkZfmB1MFJkLFhuoH5adYNPHzhgm7V9U3nqcNQ+Wvb+ohzKNPM1h2Hn4dySr97tQWX27EQzYRKoUFDfvjblSWVXdPTu8pebajcgJcwp8GGNSZEVLF9roplNomei44LHgNYszDxy+EOkA0s9hjip5/aoC0=
+  - secure: W8qEToLkj94Y3LNkeZ62rFA4B0pwMJfBUNXHCXL0MqXrQ+QLH8hBdstdzRNTL89PNFPkCCQvm/tQzWkMtM28q4tvAxcDQFtvTnaQxENEaQ2YVFyXfxFz+yJWOq9FQ2vosf0AMOYPlruuOn1vqdjIauCpfuawwzpZ0I5LlvMje2U=
+  - secure: TU++gAItQq2WwAfXO1gUKo9bbZ+gIp7QdTI6lOYfAV/ODguh7VIeEwKmsy0xg95PU31ax+vz3grliIgsSg6Pp3EkFT8cDnIJf/vRqjiIfh2vf+uiWLJRgjFIq62NVKnVZHhjCdLTO+YiUNq97mohr50aHVyvSfwwEJuus3Qclzg=
+  - secure: eYTFFLdBcfRvGX2n+XEymTslXhQljs1zf/g11pUtjCRIOE2kubDYvyuT6lQpGj2VHf64szwObdkBNWa6ZsoSspryzkoF3EBQtLXpdbx7vaduhXfVIDAlbPv96QBp0Vq00ZjDe7Y0b83hG1EO8bNrbp/vyt9hLs0CN39dOBDL3BQ=
+  - secure: gAgL3KLZkG3tqNMdBPuAzDUL7o0HqWgrlY8nC2Ey8NiOyF8z/gTZkWfU8jIDCRYPiEpI5/JPJHzraoMMhHL0SZ6xzt0bnY4V+XW3HexpCl54a+Wz7JIkvi0YPsMlXNzbdZDL4/3lytf5CR5CiSzgTYr6ok7jS0QBPFrp2sI0mLc=
+  - secure: F5+VpnqO1+7QDVh+vRdTLVWf/Q+V01S2Vyk9y6OZTeGiaMuGikDDpjsR2SdqgxtFy7Ens2I2EX/K8/9wdc5j7Wb4oMvifeJiMJiOgTzbIP/X8Ry9/VAanvdBdqpiQMzXOHYYfqm7B8v+Md7m0IeGpyuBOT5FLdTvnvmKNnKVS1s=
+  - secure: UIn5fReHI2l3iZSyGvRVQVqrnN5f5HlvGIi4Eims+sIoWKHTBFesjLW+1tdaTUtbjkn2Rbqm4yFoUEJ/MmfOyU9qqzYmyv01chfDg2HumrMyvL4k969anZEUXHW6JRDsHySVJg4JLLbJc1gv+aVgjWuzm8R0JFMQRlvjYzhoioA=
+  - secure: C/Lmf95/YtiOhqT1q2Hq6s/JURYryXv9pkrJaSBXuRq+nt31GWA8cUpUoPpODwak21ZLbz+2iiK+r+GGsAzINvgWrPw/AnCFgGDmgraOcRX1YRhqjFc/MJHqMkD4BZ2SlnBu4w60bihfmQPQ2bfyqStCBE3wtNsS68ADdtL57Dk=
+  - secure: N+86esZeBlvBAurpzR13sFc0/PzOBNeZJ+d3bKph531Gc7mRT9kZ7joGFTHMIHTryd8+3WUcPsU05GG2HIzIXoqXGQchinB1xPPEszXXNeDFIpDe8JTKjDzIvzcpx9JwBwuUJq8M6GVomS0iYHfI3pTPY3ONUdiceTwO9oxWidE=
+  - secure: TfmdAEYldrKXWurZWWekDGWUmS5Ec6OPDS8HTN9lrckXcJ+aXCmiXMsPb6HrSH3F1rp8wCedKFIJ1OjDYBMNpAufsqgrAy8k25nOhod8Cwa5aMYvJ1wUfA5frAMhrmBX+/vBHa2LnS8vB4jZurLKb+cOthJdk48agfZYrWXX0z0=
+  - secure: eaUTFIvnJMCqERtTQwBzN1T4PBWnHr5WNKMEq73PXikRy5SMhj8ctAODa6EDc5OH4Csfqu9Va+ke4yE6Gv0loMLrSwPInJoPjwwZsnO4KSoEfrcuh8Z7bxqqOogwJ3z8NfSeluXaBeGjPbf1QhR/3mAYbHLMfiW1mAapBBWXKdM=
+  - secure: PXZf/lIxNqsZuEyI93SI42D6LTQCIcGiOEIFrBpOAJuHL4rqApP/SZ3S0GHV2734KNAb5CaiL5jgFyPlwDgbgQ/SOxAtoxrsMcAlWGpu3mNZb8mRcgk4PsEou6jZ6twYXC8XhJXOWAb4MBN7hsBpy4+TJe75ppd1eXTk3n8Omb8=
+  - secure: Bt1h4tF8ewRciXu+vhNCXd1y/neqfViHVhBoW9VM2Wvcw2PnqzOQCw0mN6AnXjmFSWac0pP/+akcieY1fjT7IaOMm17c2GGdzfvCPebg3RAvp/3rQfvBeEC7HRJzkHigVGtGCCEBgCR2uVAjMMzmLMzQOwiW1vH5W3mPS3YCGns=
+  - secure: anYwtbYyjim1/Jk21AKok4WrX2vIzaj+YC0aahDy5CQ7u7keDEfF0m6vLkl23dpthLWiPUGR/dG1YuAJdtd0dndze1AGiY/PUe/kDClmitgIzyHnSrsGH8JdTZ0Ufrq+nwmUZd/hYth8CUvpyqSrIa6KPvpRTJx8pxi0K2hX/ao=
+  - secure: GW3s+fnQLxIPQQoUKP0kE9zZvDqGjaZIjVHt4uXluBoOrJjOFXHDRilGhPUsqN8xbE/Es5aHEykFhVB+oOB8Jh9xku+DKzkEAFndazhFjGjf9FWEnVQrS6p7M60gOjumM7aIQR84lzkJI7f27elARqVAAsJtsooc48SQxHPdpn8=
+  - secure: HEVdV6AJ7rmb+rCimY04Yc22fiQBIjRcP1cRE/GKYBHA3w1cwqdDvrT3HSwOy+S9o9kqmChhIRmWrDGA5o3we0IA/TIVJPjbcsLdsLhpLrvuOut6EMDt1A08zQELjkhPUDxNE8H1wDSwOiVYstfUqwgud5aXY174/uTFu3mxYZc=
+  - secure: h4Q81s0p6avkKaeyG8X/tJZ3ZHgRc0S/o4tp5EeUJqJRao9Sgs/peYDqEDnMKQIdzfzsBvlMumqMzyfX9qYFRbHmfSreVmJBjuhqAz/ahHDtgy2Hf87mn8TB6IrSp3bCuHz+dlV9KZwfcCtztYmxoVBOXsFA2MjhEWGYbAfutBY=
+  - secure: cgIjsTcxb0+XVR+CcvZzPwtBTx0T8BGHD542lNIfkmxJfXfpjwTlf1/A/4YxttbtpuoIpkN6s3RRBHKI+mNWxTtQZfpIb7fur0zPrF4fbQzDfAglWhR5sOiY6I0NOjDnQ1zaIoiKHnjasqeAZCC/OKLz2i34Qb5lPLjy/ccYpwc=
+  - secure: fNAzcjt3fHNtiGUFqcBA/g555I/Inizotxp1AxewK1HdVJ/YowPqJD9kpCFXr7g2psQdj5iyuyqaxzmBGlIuhj029rs2aapC48iJY/10XJl84c8v+26yEwd777u12vo96rgvMYJlOQZXrRkxyTjT6YXBZPYjnoPiKrpYSZF+29w=
+  - secure: d+zWcV4+WkEA0Y6tfos7rVq+h8CJDtkrhOcpeyCS3bT1BA7v1FLBfUrWwdFESVWxXtGPnLuqR2ziAEAZjEyujQTLAfidkKj2p/Bp/YczeBlH2mLrNtnIlhjPB9tGTv9K0VyMowz3ZJfhQcXcukzofpWG7C4G4KxK+SwnpERKx1U=
+  - secure: AY9yAk/ydxxuWPgJcPbd8fSGB60qqmagFNdHeqpZEpBU9LLdhpFm722f40HkOfEOJMKp4fB5lf6yya0Fl5/aHFa71Ix99Ef2Dz5ChTfSO7kFz7tGWNCV+U1iAw+uQrxIIzokDzH2QmrsEhd71uU/wvZ5d118y9exYHbKwqrgINQ=
+  - secure: YxV0/2B1tt4IJ3xbGo8Gd0ykwdNUMjfgOrrJC/de7z2B5ZZZ+VO12X+KJtwMrl/1uhVqNH5mZBrE8WcpqoyqxG4Q4Kr1NxwbIJR31SMGCeY0u9fxDxfqzU3jUgYiaQds0g02JByDWEa4qU9zSbR+8cVIg4q8nJAaT1PeAVb8ugo=
+  - secure: KifbSkwZMP6ZoQqygkM/mzjAK1B3iuXUep2eyUg/EJNwJlITNMNpoIzPIMLEZCTAYHnGsNq1qbjLESiEloNw95Zf+trMhy+7CVZ+Q1wpm2uSzN1wwQATZYTMkGYOxBWB0ytE2GshKOGYQeIpH1SVfZuy4ca2F0Z1HuXPgs+kgZI=
+  - secure: NQ/hHoNRXMeiLV0Xe24Ao5FuAyHPaXN6/gFYd4QVRq3QoPBDGWntJbfeLlJcoob/GW6lf8oBY5X/sjpWWnDfoXagcsDXeCo3GOrQi5WAISoqtSQtBM+NRHjzm+uxFHqvUcWX6Q+ZeXPfilgmZ27vmOuMNsi9i8q0ZGrLmM/TmNE=
+  - secure: V4Da2NSg/GXeXVs7KjEc1Z7cn/45Aa5o2SeynoSkUAiSPinyao32mthQsMyH9X054JEr2f9pYrD2QQCz+5h8WTnUqCxI8DBlrKBZgI20sFeVZCpDLAUp3LMPCc3XAvUQ+nb462lsm5v5WfWNhg7a3X4KvGIQemnBaZz7k5Rwveo=
+  - secure: DKyZHZCKFEQhvpjOt03VYrw3vpVFFln8aEBolCmtFYXoIrBivPuInyvfxBupTml1Ku7umVPEMzvnWoio5WON7iPsV2pwbGhYa8nE8q7qQhR6Wnf100i+/kuBdC/DtVd+myJdMBSPO55tQY1Zu14wb52VTEUKwLFpc/kQz6TViWU=
+  - secure: JnMz1oHjKD27hjCI6k5Dj80SVFQ/KxjkorKNhqDbmVxPi2/RxVWgVtvkIHyXf7tnhdr990x5ZqUfXkN3LL5tARE799j53XGLnOMESisVGxCWKTH1JkL7YphG+dU/Wi2Kr1C/ekQWCiRyO5RqUwdYm0AJHZTwL16QCENO+QQSU30=
